<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".radioGroup.Call">

    <EditText
        android:id="@+id/etCall"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:hint="@string/enter_your_ph_numbers" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCall"
        android:text="@string/call"
        android:layout_width="wrap_content"
        android:layout_below="@+id/etCall"
        android:layout_marginTop="24sp"
        android:layout_alignEnd="@+id/etCall"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBill"
        android:text="@string/check_bill"
        android:layout_width="wrap_content"
        android:layout_toLeftOf="@+id/btnCall"
        android:layout_alignBaseline="@+id/btnCall"
        android:layout_height="wrap_content"/>
</RelativeLayout>