<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tvResult"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_bg_bmi"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="64dp"
    tools:context=".BMI_Calculator">

    <RelativeLayout
        android:id="@+id/rlWeight"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:background="@color/layout_bg_bmiView"
        android:paddingBottom="12dp">

        <TextView
            android:id="@+id/tvWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/weight"
            android:textColor="@color/white"
            android:textSize="38sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvWeight"
            android:layout_centerHorizontal="true"
            android:ems="3"
            android:inputType="number"
            android:textSize="32sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/etWeight"
            android:layout_toEndOf="@+id/etWeight"
            android:text="@string/kg"
            android:textSize="34sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlWeight"
        android:layout_marginTop="32dp"
        android:background="@color/layout_bg_bmiView"
        android:paddingBottom="12dp">

        <TextView
            android:id="@+id/tvHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="12dp"
            android:text="@string/height"
            android:textColor="@color/white"
            android:textSize="38sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvHeight"
            android:layout_alignStart="@+id/tvHeight"
            android:ems="3"
            android:inputType="number"
            android:textSize="32sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/etHeight"
            android:layout_toEndOf="@+id/etHeight"
            android:text="@string/cm"
            android:textSize="34sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Calculate"
            android:textAllCaps="false"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="History"
            android:textAllCaps="false"
            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/layout_bg_bmiView"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="54sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tvRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="12dp"
            android:text="@string/range"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>